# ProjectTailFairy

./: .gitignore  README.md  package.json  pyproject.toml  tsconfig.json  turbo.json
core/: __init__.py
core/homeostasis/: __init__.py
core/learning/: __init__.py
core/models/: __init__.py
core/neuron/: __init__.py
core/plasticity/: __init__.py
core/synapse/: __init__.py
docs/: migration-notes.md
experiments/benchmarks/: README.md
experiments/phase1-fixed/: README.md  example.ts
experiments/phase2-synapse/: README.md
experiments/phase3-neuron/: README.md
experiments/sandbox/: README.md
